Custom button has been added Changed C++ standard to C++17

--- a/qml.qrc
+++ b/qml.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>script/qml/main.qml</file>
+        <file>script/qml/controls/CustomButton.qml</file>
     </qresource>
 </RCC>
