added multimedia module to CMakeLists.txt added video page prototype refactored buttons

--- a/qml.qrc
+++ b/qml.qrc
@@ -18,5 +18,6 @@
         <file>script/qml/controls/LeftMenuButton.qml</file>
         <file>script/qml/pages/HomePage.qml</file>
         <file>script/qml/pages/SettingsPage.qml</file>
+        <file>script/qml/pages/VideoPage.qml</file>
     </qresource>
 </RCC>
