all pages added, settings button moved to bottom

--- a/qml.qrc
+++ b/qml.qrc
@@ -23,5 +23,7 @@
         <file>data/music.svg</file>
         <file>data/video.svg</file>
         <file>data/image.svg</file>
+        <file>script/qml/pages/AudioPage.qml</file>
+        <file>script/qml/pages/ImagePage.qml</file>
     </qresource>
 </RCC>
