Refactored TopBar: - moved to separate file - decoupled from main.qml Added Page QML type background for Audio and Image pages

--- a/qml.qrc
+++ b/qml.qrc
@@ -25,5 +25,6 @@
         <file>data/image.svg</file>
         <file>script/qml/pages/AudioPage.qml</file>
         <file>script/qml/pages/ImagePage.qml</file>
+        <file>script/qml/menu/TopBar.qml</file>
     </qresource>
 </RCC>
