LeftMenu is decoupled from main.qml and refactored

--- a/qml.qrc
+++ b/qml.qrc
@@ -26,5 +26,6 @@
         <file>script/qml/pages/AudioPage.qml</file>
         <file>script/qml/pages/ImagePage.qml</file>
         <file>script/qml/menu/TopBar.qml</file>
+        <file>script/qml/menu/LeftMenu.qml</file>
     </qresource>
 </RCC>
