--- a/qml.qrc
+++ b/qml.qrc
@@ -2,7 +2,7 @@
     <qresource prefix="/">
         <file>script/qml/main.qml</file>
         <file>script/qml/controls/CustomButton.qml</file>
-        <file>script/qml/controls/ToggleButton.qml</file>
+        <file>script/qml/controls/SquareButton.qml</file>
         <file>data/close_icon.svg</file>
         <file>data/home_icon.svg</file>
         <file>data/icon_app_top.svg</file>
@@ -14,7 +14,6 @@
         <file>data/restore_icon.svg</file>
         <file>data/save_icon.svg</file>
         <file>data/settings_icon.svg</file>
-        <file>script/qml/controls/TopBarButton.qml</file>
         <file>script/qml/controls/LeftMenuButton.qml</file>
         <file>script/qml/pages/HomePage.qml</file>
         <file>script/qml/pages/SettingsPage.qml</file>
@@ -35,5 +34,6 @@
         <file>data/left-arrow.svg</file>
         <file>data/play.svg</file>
         <file>data/right-arrow.svg</file>
+        <file>data/pause.svg</file>
     </qresource>
 </RCC>
