--- a/qml.qrc
+++ b/qml.qrc
@@ -48,5 +48,6 @@
         <file>script/qml/delegates/SongDelegate.qml</file>
         <file>script/qml/delegates/VideoDelegate.qml</file>
         <file>data/movie.svg</file>
+        <file>script/qml/controls/VideoList.qml</file>
     </qresource>
 </RCC>
