Volume bar and volume control is completed TODO: settings page

--- a/qml.qrc
+++ b/qml.qrc
@@ -51,5 +51,6 @@
         <file>script/qml/controls/VideoList.qml</file>
         <file>script/qml/delegates/ImageDelegate.qml</file>
         <file>script/qml/controls/ImageViewer.qml</file>
+        <file>script/qml/controls/CircularProgressBar.qml</file>
     </qresource>
 </RCC>
