--- a/qml.qrc
+++ b/qml.qrc
@@ -58,5 +58,7 @@
         <file>script/qml/delegates/StringItemDelegate.qml</file>
         <file>script/qml/controls/FlatStringList.qml</file>
         <file>script/qml/controls/DirectoryEmplacer.qml</file>
+        <file>script/qml/controls/PopupTextInput.qml</file>
+        <file>script/qml/controls/ExtensionsList.qml</file>
     </qresource>
 </RCC>
