--- a/qml.qrc
+++ b/qml.qrc
@@ -61,5 +61,7 @@
         <file>script/qml/controls/PopupTextInput.qml</file>
         <file>script/qml/controls/ExtensionsList.qml</file>
         <file>script/qml/controls/ItemsGrid.qml</file>
+        <file>script/qml/controls/RecentItem.qml</file>
+        <file>script/qml/controls/patterns.js</file>
     </qresource>
 </RCC>
